GUI Sonar fixes